<resources>
    <string name="app_name">Registor_Login</string>
    <string name="mainId_name">登录注册</string>
    <string name="registerTitle">注 册</string>
    <string name="registerBtn">注册</string>
    <string name="Login">登录</string>
    <string name="username">账号:</string>
    <string name="password">密码:</string>
    <string name="passwordAgain">确认密码：</string>
    <string name="inputUsername">请输入账号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputPasswordAgain">请再次输入密码</string>
    <string name="btnBack">返回</string>
    <string name="userInfoTitle">用户信息</string>
    <string name="usernameInfo">账号: %s</string>
    <string name="passwordInfo">密码: %s</string>
</resources>