<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk_login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#57250E"
        android:layout_marginTop="60dp"
        >
    </TextView>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="200dp"
        android:text="@string/username"
        android:textColor="#57250E"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/login_InputUsername"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/inputUsername"
        android:textColor="#000000"
        android:textSize="20sp"
        android:background="#50BC7A4D"
        android:layout_marginStart="90dp"
        android:layout_marginTop="190dp"
        >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="270dp"
        android:text="@string/password"
        android:textColor="#57250E"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/login_InputPassword"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/inputPassword"
        android:textColor="#000000"
        android:textSize="20sp"
        android:background="#50BC7A4D"
        android:layout_marginStart="90dp"
        android:layout_marginTop="260dp"
        >
    </EditText>

    <android.widget.Button
        android:id="@+id/btn_loginMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/Login"
        android:textSize="25sp"
        android:layout_marginTop="450dp"
        >
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/back_loginMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/btnBack"
        android:textSize="25sp"
        android:layout_marginTop="510dp"
        >
    </android.widget.Button>
</RelativeLayout>