<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#57250E"
        android:layout_marginTop="30dp"
        >
    </TextView>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="200dp"
        android:text="@string/username"
        android:textColor="#57250E"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/inputUsername"
        android:textColor="#000000"
        android:textSize="20sp"
        android:background="#50BC7A4D"
        android:layout_alignBottom="@+id/username"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="490dp"
        >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="270dp"
        android:text="@string/password"
        android:textColor="#57250E"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/inputPassword"
        android:textColor="#000000"
        android:textSize="20sp"
        android:background="#50BC7A4D"
        android:layout_alignBottom="@+id/username"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="420dp"
        >
    </EditText>


</RelativeLayout>